@@ -5,6 +5,8 @@
 package graphtutorial;
 
 import java.net.MalformedURLException;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -35,7 +37,7 @@ public class Authentication {
             return null;
         }
 
-        Set<String> scopeSet = Set.of(scopes);
+        Set<String> scopeSet = new HashSet<>(Arrays.asList(scopes));
 
         ExecutorService pool = Executors.newFixedThreadPool(1);
         PublicClientApplication app;
